--- a/product/product.css
+++ b/product/product.css
@@ -37,7 +37,8 @@
 .shals{
 flex-direction: row  !important;
 }
-@media (min-width: 576px) {
+
+@media (max-width: 767px) {
     
 .shals{
     gap: 3rem;
