--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,25 @@
 
 
 
-
+@media (max-width:767px) {
+  .disnav{
+    display: none !important;
+  }
+  .appnav{
+    display: block !important;
+  }
+  header{
+    justify-content: space-between !important;
+  }
+}
+header{
+  justify-content: center;
+}
+.appnav{
+  display: none ;
+  width: fit-content !important;
+  padding: 5px 10px !important;
+}
 .header {
   position: relative;
   z-index: 2;
@@ -346,6 +364,10 @@
   display: flex;
   flex-direction: column;
   gap: 4%;
+  height: 100%;
+}
+.second-col{
+  height: 70vh;
 }
 
 
@@ -626,10 +648,15 @@ a {
   text-transform: uppercase;
   position: absolute;
   top: 15px;
-  right: 50%;
+  right: 0%;
   padding: 4px 10px;
 }
-
+@media (max-width: 767px) {
+  
+  .second-col{
+      height: 90vh !important;
+  }
+}
 .card-badge.green {
   background: var(--yellow-green);
 }
@@ -2290,12 +2317,12 @@ h4{
    */
 
   .about .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    gap: 60px;
+    display: flex;
+    justify-content: space-evenly;
   }
-
+  .about-content{
+    gap: 2% !important;
+  }
   .about-banner {
     margin-bottom: 0;
   }
@@ -3304,7 +3331,7 @@ footer {
 position: relative;
 display: flex;
 flex-direction: column;
-gap: 1.5rem;
+/* gap: 1.5rem; */
 }
 .card-content{
   background-color: transparent;
